# Parprog-MIPT

./: README.md
tasks/buggedFiles/: bugged1.c  bugged2.c  bugged3.c  bugged4.c  bugged5.c  bugged6.c  build.sh  run.sh
tasks/exp/: build.sh  exp.c  run.sh
tasks/hello/: build.sh  build_ad.sh  hello.c  hello_ad.c  run_ad.sh
tasks/lab/: CMakeLists.txt  READ.md  build.sh  lab.c  lab_second.c  result.txt  run.sh
tasks/massiv/: build.sh  build_dop.sh  run.sh  run_dop.sh  task.c  task_dop.c
tasks/matrix/: build.sh  matrix.c  run.sh
tasks/prime/: build.sh  prime.c  run.sh
tasks/quicksort/: build.sh  data.txt  quickSort.c  run.sh
tasks/sum/: build_reduction.sh  build_schedule.sh  build_sum.sh  run_reduction.sh  run_schedule.sh  run_sum.sh  sum.c  sum_reduction.c  sum_schedule.c
